# These files will end up in the install resource directory
# For example, /usr/share/<app_name>
glsldir = $(prefix)/$(PACKAGE)/res/glsl

dist_glsl_DATA = BasicFragmentShader.glsl \
                 BasicVertexShader.glsl \
                 TextureFragmentShader.glsl \
                 TextureVertexShader.glsl
